[gd_scene format=3 uid="uid://dliqpifu5ll0e"]

[ext_resource type="Texture2D" uid="uid://dmpexpwtfsxbd" path="res://assets/plane_pack/planes/plane_1/plane_1_red.png" id="1_viktg"]
[ext_resource type="Script" uid="uid://dsm1yho6kp2b3" path="res://scripts/skin_menu.gd" id="1_xt7lh"]
[ext_resource type="FontFile" uid="uid://byrn6tqmul438" path="res://fonts/Zen_Dots/ZenDots-Regular.ttf" id="2_xmlfx"]
[ext_resource type="StyleBox" uid="uid://bbvt117ekb27v" path="res://styles/button_normal.tres" id="3_0edpv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4mfo"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.85882354, 0.85882354, 0.85882354, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 14.0
expand_margin_top = 10.0
expand_margin_right = 14.0
expand_margin_bottom = 10.0
shadow_size = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18at4"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.85882354, 0.85882354, 0.85882354, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 14.0
expand_margin_top = 10.0
expand_margin_right = 14.0
expand_margin_bottom = 10.0
shadow_size = 7

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_21u2u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmlfx"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.85882354, 0.85882354, 0.85882354, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 19.0
expand_margin_right = 19.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0edpv"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.85882354, 0.85882354, 0.85882354, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 19.0
expand_margin_right = 19.0
shadow_size = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21u2u"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.85882354, 0.85882354, 0.85882354, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 14.0
expand_margin_right = 14.0
shadow_size = 7

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x8k7v"]

[node name="SkinMenu" type="Control" unique_id=1410875691]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xt7lh")

[node name="Panel" type="Panel" parent="." unique_id=355315360]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="BackButton" type="Button" parent="Panel" unique_id=1269919021]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.5
offset_top = -123.0
offset_right = 132.5
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xmlfx")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_0edpv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h4mfo")
theme_override_styles/hover = SubResource("StyleBoxFlat_18at4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_21u2u")
text = "Save"

[node name="Label" type="Label" parent="Panel" unique_id=334408601]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -233.5
offset_right = 110.0
offset_bottom = -198.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xmlfx")
theme_override_font_sizes/font_size = 28
text = "Select Type:"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel" unique_id=690134052]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -176.5
offset_right = 176.0
offset_bottom = -79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 67
alignment = 1

[node name="SwitchLeftButton" type="Button" parent="Panel/HBoxContainer" unique_id=377552679]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xmlfx")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_xmlfx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0edpv")
theme_override_styles/hover = SubResource("StyleBoxFlat_21u2u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x8k7v")
text = "<"

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer" unique_id=826057614]
layout_mode = 2
texture = ExtResource("1_viktg")
expand_mode = 3

[node name="SwitchRightButton" type="Button" parent="Panel/HBoxContainer" unique_id=1255409348]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_xmlfx")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_xmlfx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0edpv")
theme_override_styles/hover = SubResource("StyleBoxFlat_21u2u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x8k7v")
text = ">"

[node name="Label2" type="Label" parent="Panel" unique_id=1755022280]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -33.5
offset_right = 112.0
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xmlfx")
theme_override_font_sizes/font_size = 28
text = "Select Color:"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel" unique_id=1667419798]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.5
offset_top = 20.0
offset_right = 291.5
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ColorSampleRect1" type="TextureRect" parent="Panel/HBoxContainer2" unique_id=211499446]
layout_mode = 2
texture = ExtResource("1_viktg")
expand_mode = 3

[node name="ColorSampleRectButton1" type="Button" parent="Panel/HBoxContainer2/ColorSampleRect1" unique_id=382101556 groups=["buttons"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="ColorSampleRect2" type="TextureRect" parent="Panel/HBoxContainer2" unique_id=1014040873]
layout_mode = 2
texture = ExtResource("1_viktg")
expand_mode = 3

[node name="ColorSampleRectButton2" type="Button" parent="Panel/HBoxContainer2/ColorSampleRect2" unique_id=1307113059 groups=["buttons"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="ColorSampleRect3" type="TextureRect" parent="Panel/HBoxContainer2" unique_id=706842591]
layout_mode = 2
texture = ExtResource("1_viktg")
expand_mode = 3

[node name="ColorSampleRectButton3" type="Button" parent="Panel/HBoxContainer2/ColorSampleRect3" unique_id=1525561752 groups=["buttons"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="ColorSampleRect4" type="TextureRect" parent="Panel/HBoxContainer2" unique_id=649923584]
layout_mode = 2
texture = ExtResource("1_viktg")
expand_mode = 3

[node name="ColorSampleRectButton4" type="Button" parent="Panel/HBoxContainer2/ColorSampleRect4" unique_id=1273392718 groups=["buttons"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="TabBar" type="TabBar" parent="." unique_id=1515495654]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.0
offset_top = 8.0
offset_right = 122.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_xmlfx")
current_tab = 0
tab_alignment = 1
tab_count = 2
tab_0/title = "Player"
tab_0/tooltip = "Customize your plane appearance"
tab_1/title = "Pipe"
tab_1/tooltip = "Customize how the pipes look"

[node name="NotImplemented" type="Label" parent="TabBar" unique_id=1509654746]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.5
offset_top = 1.0
offset_right = 112.5
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 0
text = "Sorry, not implemented yet..."

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/SwitchLeftButton" to="." method="_on_switch_left_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/SwitchRightButton" to="." method="_on_switch_right_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer2/ColorSampleRect1/ColorSampleRectButton1" to="." method="_on_color_sample_rect_button_1_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer2/ColorSampleRect2/ColorSampleRectButton2" to="." method="_on_color_sample_rect_button_2_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer2/ColorSampleRect3/ColorSampleRectButton3" to="." method="_on_color_sample_rect_button_3_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer2/ColorSampleRect4/ColorSampleRectButton4" to="." method="_on_color_sample_rect_button_4_pressed"]
[connection signal="tab_changed" from="TabBar" to="." method="_on_tab_bar_tab_changed"]
